edit: enhance PDF generation workflow with improved course identification and formatting options

--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -21,27 +21,43 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+          
       - name: Install Pandoc and LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra texlive-xetex
-      
+          sudo apt-get install -y pandoc texlive-xetex texlive-fonts-recommended texlive-latex-extra
+
       - name: Convert Markdown to PDF
         run: |
           find . -name "Compiled Notes.md" -type f | while read file; do
+            course_name=$(basename "$(dirname "$file")")
             dir=$(dirname "$file")
             filename=$(basename "$file" .md)
-            echo "Converting: $file"
+            
+            echo "Converting: $file for Course: $course_name"
+
+            cat << 'EOF' > header.tex
+            \usepackage{titling}
+            \pretitle{\begin{center}\vspace*{\fill}\Huge\bfseries}
+            \posttitle{\end{center}}
+            \preauthor{\begin{center}\large}
+            \postauthor{\end{center}\vspace*{\fill}\clearpage}
+            EOF
+
             pandoc "$file" -o "$dir/$filename.pdf" \
               --pdf-engine=xelatex \
+              --include-in-header=header.tex \
+              --variable title="$course_name" \
+              --variable author="Compiled Revision Notes" \
               --variable geometry:margin=1in \
               --variable fontsize=11pt \
               --toc \
               --toc-depth=2 \
+              --variable toc-title="Table of Contents" \
               -V colorlinks=true \
               -V linkcolor=blue \
-              -V urlcolor=blue
+              -V urlcolor=blue \
+              -V include-after="\clearpage"
           done
       
       - name: Commit PDFs
@@ -49,5 +65,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add "**/*.pdf"
-          git diff --staged --quiet || git commit -m "📄 Auto-generate PDFs from markdown notes"
-          git push
+          # Only commit if there are changes to avoid workflow failure
+          git diff --staged --quiet || (git commit -m "📄 Auto-generate PDFs" && git push)
