--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -2,8 +2,7 @@ name: Convert Markdown to PDF
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
     paths:
       - '**/*.md'
       - '!README.md'
@@ -15,7 +14,6 @@ permissions:
 jobs:
   convert-to-pdf:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -27,44 +25,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-xetex texlive-fonts-recommended texlive-latex-extra
 
-      - name: Convert Markdown to PDF
-        env:
-          LATEX_HEADER: |
-            \usepackage{titling}
-            \pretitle{\begin{center}\vspace*{\fill}\Huge\bfseries}
-            \posttitle{\end{center}}
-            \preauthor{\begin{center}\large}
-            \postauthor{\end{center}\vspace*{\fill}\clearpage}
-        run: |
-          find . -name "Compiled Notes.md" -type f | while read file; do
-            course_name=$(basename "$(dirname "$file")")
-            dir=$(dirname "$file")
-            filename=$(basename "$file" .md)
-            
-            echo "Converting: $file for Course: $course_name"
+      - name: Run Python Converter
+        run: python3 .github/scripts/convert_notes.py
 
-            # Safely write the environment variable to header.tex
-            echo "$LATEX_HEADER" > header.tex
-
-            pandoc "$file" -o "$dir/$filename.pdf" \
-              --pdf-engine=xelatex \
-              --include-in-header=header.tex \
-              --variable title="$course_name" \
-              --variable author="Compiled Revision Notes" \
-              --variable geometry:margin=1in \
-              --variable fontsize=11pt \
-              --toc \
-              --toc-depth=2 \
-              --variable toc-title="Table of Contents" \
-              -V colorlinks=true \
-              -V linkcolor=blue \
-              -V urlcolor=blue \
-              -V include-after="\clearpage"
-          done
-      
       - name: Commit PDFs
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add "**/*.pdf"
-          git diff --staged --quiet || (git commit -m "📄 Auto-generate PDFs" && git push)
+          git diff --staged --quiet || (git commit -m "📄 Auto-generate PDFs via Python" && git push)
